--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@vercel/analytics": "^1.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.49.3",
     "react-router-dom": "^6.21.3",
     "zustand": "^4.5.0"
   },
